--- a/nginx.conf
+++ b/nginx.conf
@@ -17,6 +17,11 @@ events {
 stream {
     server {
         listen              443 ssl;                    # 设置监听端口为443
+        listen              6443 ssl;
+        listen              7443 ssl;
+        listen              8443 ssl;
+        listen              21 ssl;
+        listen              3306 ssl;
 
         ssl_protocols       TLSv1.2 TLSv1.3;      # 设置使用的SSL协议版本
 
